--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
       </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./family.jpg" class="d-block w-100" alt="family">
+        </div>
 </body>
 
 </html>
