--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         <div class="carousel-item active">
           <img src="./family.jpg" class="d-block w-100" alt="family">
         </div>
+        <div class="carousel-item">
+          <img src="./dog.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./couple.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
 </body>
 
 </html>
